{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "bf64f4ee-f23a-407a-b6ef-291faf01b208",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "db382b6e-2c0b-456d-a829-c64e9fc33518",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "5f34c3a3-3f8d-4346-827f-dbeb98177540",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "d29be54c-0540-4e56-bd08-62f4ea1bc4af",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "47eaedc2-085a-4a58-bf7c-c5dfec7e9e2c",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61680133-0b48-4381-bae1-e7c1b4ea6779",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "805c737f-9233-4ae8-b587-96530eee6776",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}